Updated highlight.js core and generic improvements to highlighting.
git-svn-id: https://plugins.svn.wordpress.org/qlikview-syntax-highlighter/trunk@1087219 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/qlikview.css
+++ b/css/qlikview.css
@@ -20,6 +20,7 @@
 
 .hljs-keyword,
 .hljs-function_keyword,
+.hljs-format_specification_items,
 .hljs-id,
 .hljs-built_in,.css
 .smalltalk .hljs-class,
